# audio-capture

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/audio-core/: Cargo.toml
crates/audio-core/examples/: decode_tap_capture.rs  dual_capture.rs  inspect_wav.rs  mic_only_long_run.rs  mic_rms.rs
crates/audio-core/src/: bus.rs  fake.rs  frame.rs  health.rs  lib.rs  mic.rs  source.rs
crates/audio-core/src/system_audio/: mod.rs  protocol.rs  source.rs
crates/audio-core/tests/: bus_integration.rs  swift_helper_smoke.rs
crates/cue-agent/: Cargo.toml
crates/cue-agent/src/: anthropic.rs  lib.rs  modes.rs  trigger.rs
crates/cue-agent/tests/: agent_integration.rs
crates/transcribe/: Cargo.toml
crates/transcribe/examples/: dual_transcribe.rs  mic_transcribe.rs  transcribe_wav.rs
crates/transcribe/src/: bus.rs  chunker.rs  lib.rs  pipeline.rs  resample.rs  whisper.rs
crates/transcribe/tests/: pipeline_integration.rs
docs/: audio-tap-protocol.md  overlay-design-brief.md
scripts/: build-helper.sh  download-model.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  overlay.rs  overlay_spike.rs
src/components/: CaptureControls.tsx  LevelMeter.tsx
src/hooks/: useCaptureHealth.ts  useCaptureLevels.ts
src/lib/: tauriApi.ts
src/overlay/: OverlayApp.tsx  SuggestionCard.tsx  overlay.css  useInteractiveRegions.ts  useSuggestions.ts
src/spike/: OverlaySpike.css  OverlaySpike.tsx
swift-helper/: Package.swift  README.md
swift-helper/Sources/AudioTapHelper/: Framing.swift  ProcessTap.swift  RingBuffer.swift  main.swift
