[workspace]
resolver = "2"
members = ["src-tauri", "crates/audio-core"]

# Keeping compiler settings here means both the Tauri app and audio-core
# (which is meant to be usable and testable without Tauri at all) build
# with the same profile, rather than drifting apart over time.
[workspace.package]
edition = "2021"
