[package]
name = "audio-capture"
version = "0.1.0"
description = "Local meeting audio capture app: separate mic and system-output streams"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audio_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` pairs with `macOSPrivateApi: true` in tauri.conf.json;
# it's what lets the overlay window (and its webview) be truly transparent.
# Fine for direct distribution; would be rejected from the Mac App Store —
# which we've already ruled out for unrelated reasons.
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audio-core = { path = "../crates/audio-core" }
cue-agent = { path = "../crates/cue-agent" }
tokio = { version = "1.52.3", features = ["sync", "macros"] }
transcribe = { path = "../crates/transcribe" }

# Only for the overlay spike's raw NSWindow calls (overlay_spike.rs);
# tauri already depends on objc2 itself, so this adds no new build weight.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

