[package]
name = "audio-core"
version = "0.1.0"
edition.workspace = true
description = "Platform-agnostic audio capture pipeline: sources, bus, framing protocol. No Tauri dependency, so it can be built and tested standalone."

[dependencies]
async-trait = "0.1.89"
cpal = "0.18.1"
hound = "3.5.1"
rtrb = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
